--- a/Project.toml
+++ b/Project.toml
@@ -3,15 +3,6 @@ uuid = "839a1018-e30d-4781-a685-a02c170cef92"
 authors = ["Mattia Tarabolo"]
 version = "1.0.0-DEV"
 
-[compat]
-julia = "1"
-
-[extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-
-[targets]
-test = ["Test"]
-
 [deps]
 CurveFit = "5a033b19-8c74-5913-a970-47c3779ef25c"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
@@ -19,3 +10,13 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+
+[compat]
+StatsBase = "0.34"
+julia = "1"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
